# rustpilot

./: .env.example  .gitignore  Cargo.toml  DEVLOG.md  README.md  TODO.md  update_skill.py  write_skill.py
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: terminal-backend-evaluation.md
skills/frontend-engineer/: SKILL.md
skills/test/: SKILL.md  tool.py  tool.sh
skills/xiaohongshu-automation/: SKILL.md
skills/xiaohongshu-poster/: SKILL.md
src/: abort_control.rs  activity.rs  agent.rs  agent_tools.rs  anthropic_compat.rs  app.rs  app_commands.rs  app_support.rs  cli.rs  config.rs  constants.rs  direct_api_bridge.rs  external_tools.rs  launch_backend.rs  launch_log.rs  lib.rs  llm_profiles.rs  main.rs  mcp.rs  openai_compat.rs  project_tools.rs  prompt_manager.rs  prompt_policy.rs  resident_agents.rs  root_request.rs  runtime_env.rs  shell_file_tools.rs  skill_authoring.rs  skill_integration.rs  skills.rs  team.rs  terminal_session.rs  tool_capability.rs  tool_manifest.rs  tools.rs  ui_intent_policy.rs  ui_server.rs  wire.rs  wire_exec.rs  workflow_defaults.rs
src/project_tools/: agent.rs  approval.rs  budget.rs  context.rs  decision.rs  event.rs  identity.rs  launch_registry.rs  launch_settings.rs  mailbox.rs  mod.rs  prompt_history.rs  proposal.rs  reflection.rs  resident_config.rs  resident_runtime.rs  session.rs  system_model.rs  task.rs  tenant_runtime_registry.rs  tools.rs  ui_page.rs  ui_schema.rs  ui_surface.rs  util.rs  worktree.rs
src/runtime/: approval.rs  lead.rs  (+5 more)
tests/: app_integration.rs  external_tools.rs  runtime_env.rs
(+23 files in other folders)
