[package]
name = "rustpilot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
dotenvy = "0.15"
futures-util = "0.3"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

[[bin]]
name = "rustpilot"
path = "src/main.rs"
